--- a/solutions.html
+++ b/solutions.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <title>Solar Solutions | WattSun Solar</title>
-  <link rel="stylesheet" href="main.css">
-  <style>
+<meta content="width=device-width, initial-scale=1" name="viewport"/><meta charset="utf-8"/>
+<title>Solar Solutions | WattSun Solar</title>
+<link href="main.css" rel="stylesheet"/>
+<style>
     body { background: #f6f9f5; }
     /* Page-specific styles only, do NOT touch header/footer */
     .solutions-calc-cta {
@@ -86,151 +87,148 @@
 </head>
 <body>
 <header>
-    <h1>WattSun Solar</h1>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="solutions.html">Solutions</a>
-        <a href="shop.html">Shop</a>
-        <a href="financing.html">Financing</a>
-        <a href="projects.html">Projects</a>
-        <a href="contact.html">Contact</a>
-        <!--<a href="cart.html">🛒 Cart</a>-->
-    </nav>
+<div class="header-bar">
+<h1>WattSun Solar</h1>
+<button aria-label="Open menu" class="nav-toggle">☰</button>
+</div>
+<nav>
+<a href="index.html">Home</a>
+<a href="solutions.html">Solutions</a>
+<a href="shop.html">Shop</a>
+<a href="financing.html">Financing</a>
+<a href="projects.html">Projects</a>
+<a href="contact.html">Contact</a>
+<!--<a href="cart.html">🛒 Cart</a>-->
+</nav>
 </header>
-
 <div class="solutions-calc-cta">
-  <a href="calculator.html" class="loan-btn">
+<a class="loan-btn" href="calculator.html">
     Try our Solar Kit Calculator
   </a>
-  <div class="calc-desc">
+<div class="calc-desc">
     Use our interactive calculator to find your perfect package.
   </div>
 </div>
-
 <div class="section-card">
-  <h2 class="centered-section-title">Residential Solar Packages</h2>
-  <div class="card-table-container">
-    <table class="styled-table">
-      <thead>
-        <tr>
-          <th>Capacity</th>
-          <th>Access (KES)</th>
-          <th>Suitable For</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>1 kW</td>
-          <td>150,000</td>
-          <td>💡 1–2 rooms, 📺 TV, 🔋 phone charging</td>
-        </tr>
-        <tr>
-          <td>3 kW</td>
-          <td>400,000</td>
-          <td>🏠 Small home, 🧊 fridge, TV, 🌐 internet</td>
-        </tr>
-        <tr>
-          <td>6 kW</td>
-          <td>720,000</td>
-          <td>🏡 Full house: appliances, entertainment, 💧 water pump</td>
-        </tr>
-        <tr>
-          <td>9 kW</td>
-          <td>1,050,000</td>
-          <td>👨‍👩‍👧‍👦 Large family homes, partial A/C</td>
-        </tr>
-        <tr>
-          <td>12 kW</td>
-          <td>1,420,000</td>
-          <td>🏘️ Premium homes, backup + solar split loads</td>
-        </tr>
-      </tbody>
-    </table>
-    <div class="card-footer">
-      <a class="loan-btn" href="shop.html">Buy Now</a>
-      <p class="table-note">* Prices are estimates for standard hybrid systems. Custom quotes available upon request.</p>
-    </div>
-  </div>
+<h2 class="centered-section-title">Residential Solar Packages</h2>
+<div class="card-table-container">
+<table class="styled-table">
+<thead>
+<tr>
+<th>Capacity</th>
+<th>Access (KES)</th>
+<th>Suitable For</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1 kW</td>
+<td>150,000</td>
+<td>💡 1–2 rooms, 📺 TV, 🔋 phone charging</td>
+</tr>
+<tr>
+<td>3 kW</td>
+<td>400,000</td>
+<td>🏠 Small home, 🧊 fridge, TV, 🌐 internet</td>
+</tr>
+<tr>
+<td>6 kW</td>
+<td>720,000</td>
+<td>🏡 Full house: appliances, entertainment, 💧 water pump</td>
+</tr>
+<tr>
+<td>9 kW</td>
+<td>1,050,000</td>
+<td>👨‍👩‍👧‍👦 Large family homes, partial A/C</td>
+</tr>
+<tr>
+<td>12 kW</td>
+<td>1,420,000</td>
+<td>🏘️ Premium homes, backup + solar split loads</td>
+</tr>
+</tbody>
+</table>
+<div class="card-footer">
+<a class="loan-btn" href="shop.html">Buy Now</a>
+<p class="table-note">* Prices are estimates for standard hybrid systems. Custom quotes available upon request.</p>
 </div>
-
+</div>
+</div>
 <div class="section-card">
-  <h2 class="centered-section-title">Our Installation Packages</h2>
-  <div class="packages-row">
-    <div class="package-tier">
-      <h3>Access</h3>
-      <ul>
-        <li>Standard solar panels + mounting</li>
-        <li>Installation &amp; commissioning</li>
-        <li>25-year panel &amp; service warranty</li>
-      </ul>
-    </div>
-    <div class="package-tier">
-      <h3>Premium</h3>
-      <ul>
-        <li>High-efficiency panels</li>
-        <li>30-year panel &amp; service warranty</li>
-      </ul>
-    </div>
-    <div class="package-tier">
-      <h3>Excellence</h3>
-      <ul>
-        <li>Maxeon-grade solar panels</li>
-        <li>40-year panel &amp; service warranty</li>
-        <li>Micro-inverters &amp; monitoring</li>
-      </ul>
-    </div>
-  </div>
-  <div class="packages-footer">
-    <p class="table-note" style="margin-top: 7px;">* All packages include installation, grid connection, monitoring setup, and long-term warranty.</p>
-  </div>
+<h2 class="centered-section-title">Our Installation Packages</h2>
+<div class="packages-row">
+<div class="package-tier">
+<h3>Access</h3>
+<ul>
+<li>Standard solar panels + mounting</li>
+<li>Installation &amp; commissioning</li>
+<li>25-year panel &amp; service warranty</li>
+</ul>
 </div>
-
+<div class="package-tier">
+<h3>Premium</h3>
+<ul>
+<li>High-efficiency panels</li>
+<li>30-year panel &amp; service warranty</li>
+</ul>
+</div>
+<div class="package-tier">
+<h3>Excellence</h3>
+<ul>
+<li>Maxeon-grade solar panels</li>
+<li>40-year panel &amp; service warranty</li>
+<li>Micro-inverters &amp; monitoring</li>
+</ul>
+</div>
+</div>
+<div class="packages-footer">
+<p class="table-note" style="margin-top: 7px;">* All packages include installation, grid connection, monitoring setup, and long-term warranty.</p>
+</div>
+</div>
 <div class="section-card">
-  <h2 class="centered-section-title">Compare Our Packages</h2>
-  <div class="card-table-container">
-    <table class="styled-table">
-      <thead>
-        <tr>
-          <th>Feature</th>
-          <th>Access</th>
-          <th>Premium</th>
-          <th>Excellence</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Panel Warranty</td>
-          <td>25 years</td>
-          <td>30 years</td>
-          <td>40 years</td>
-        </tr>
-        <tr>
-          <td>Output Warranty</td>
-          <td>85% @ 30 yrs</td>
-          <td>87% @ 30 yrs</td>
-          <td>88% @ 40 yrs</td>
-        </tr>
-        <tr>
-          <td>System Type</td>
-          <td>Basic + Grid</td>
-          <td>High Output</td>
-          <td>Top-tier + Micro-inverter</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+<h2 class="centered-section-title">Compare Our Packages</h2>
+<div class="card-table-container">
+<table class="styled-table">
+<thead>
+<tr>
+<th>Feature</th>
+<th>Access</th>
+<th>Premium</th>
+<th>Excellence</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Panel Warranty</td>
+<td>25 years</td>
+<td>30 years</td>
+<td>40 years</td>
+</tr>
+<tr>
+<td>Output Warranty</td>
+<td>85% @ 30 yrs</td>
+<td>87% @ 30 yrs</td>
+<td>88% @ 40 yrs</td>
+</tr>
+<tr>
+<td>System Type</td>
+<td>Basic + Grid</td>
+<td>High Output</td>
+<td>Top-tier + Micro-inverter</td>
+</tr>
+</tbody>
+</table>
 </div>
-
+</div>
 <!-- CTA Section, as in your screenshot -->
 <div style="text-align:center; margin:52px auto 0 auto;">
-  <h2 style="font-size:2em; font-weight:700; color:#222; margin-bottom:8px;">
+<h2 style="font-size:2em; font-weight:700; color:#222; margin-bottom:8px;">
     Ready to Start?
   </h2>
-  <div style="color:#444; font-size:1.13em; margin-bottom:32px;">
+<div style="color:#444; font-size:1.13em; margin-bottom:32px;">
     Request a quote or speak to an expert today.
   </div>
-  <a href="contact.html"
-     style="
+<a href="contact.html" onmouseout="this.style.background='linear-gradient(90deg, #ffe180 0%, #ffd449 100%)'; this.style.color='#184211';" onmouseover="this.style.background='linear-gradient(90deg, #ffd449 0%, #ffe180 100%)'; this.style.color='#0c4906';" style="
       display: inline-block;
       background: linear-gradient(90deg, #ffe180 0%, #ffd449 100%);
       color: #184211;
@@ -244,20 +242,27 @@
       text-decoration: none;
       transition: background 0.14s, color 0.13s, transform 0.13s;
       margin-bottom: 9px;
-    "
-    onmouseover="this.style.background='linear-gradient(90deg, #ffd449 0%, #ffe180 100%)'; this.style.color='#0c4906';"
-    onmouseout="this.style.background='linear-gradient(90deg, #ffe180 0%, #ffd449 100%)'; this.style.color='#184211';"
-  >
+    ">
     Get a Free Quote
   </a>
 </div>
-
 <footer>
-  <div class="footer-contacts">
-    <a href="mailto:info@wattsun.co.ke">info@wattsun.co.ke</a>
-  </div>
-  <p>© 2025 WattSun Solar. All rights reserved.</p>
+<div class="footer-contacts">
+<a href="mailto:info@wattsun.co.ke">info@wattsun.co.ke</a>
+</div>
+<p>© 2025 WattSun Solar. All rights reserved.</p>
 </footer>
+
+<script>
+  const navToggle = document.querySelector('.nav-toggle');
+  const header = document.querySelector('header');
+  navToggle.addEventListener('click', function() {
+    header.classList.toggle('nav-open');
+  });
+  document.querySelectorAll('header nav a').forEach(link => {
+    link.addEventListener('click', () => header.classList.remove('nav-open'));
+  });
+</script>
 <script src="main.js"></script>
 </body>
 </html>
