--- a/projects.html
+++ b/projects.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <title>Our Projects | WattSun Solar</title>
-  <link rel="stylesheet" href="main.css"/>
-  <style>
+<meta content="width=device-width, initial-scale=1" name="viewport"/><meta charset="utf-8"/>
+<title>Our Projects | WattSun Solar</title>
+<link href="main.css" rel="stylesheet"/>
+<style>
     .grid {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
@@ -51,84 +52,94 @@
   </style>
 </head>
 <body>
-  <!-- Header: From main.css -->
-  <header>
-    <h1>WattSun Solar</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="solutions.html">Solutions</a>
-      <a href="shop.html">Shop</a>
-      <a href="financing.html">Financing</a>
-      <a href="projects.html">Projects</a>
-      <a href="contact.html">Contact</a>
-      <!--<a href="cart.html">🛒 Cart</a>-->
-    </nav>
-  </header>
-
-  <section>
-    <h2 class="centered-section-title">Recent Projects</h2>
-    <div class="grid">
-      <!-- First row: real projects -->
-      <div class="project">
-        <img src="images/family-home-karen.jpg" alt="Family Home – Karen" />
-        <div class="project-info">
-          <h3>Family Home – Karen</h3>
-          <p>3kW rooftop solar with battery backup. Reliable clean power for the whole family, even during outages.</p>
-        </div>
-      </div>
-      <div class="project">
-        <img src="images/nairobi-factory.jpg" alt="Nairobi Factory" />
-        <div class="project-info">
-          <h3>Nairobi Factory</h3>
-          <p>9kW hybrid inverter system. Industrial-grade solar for uninterrupted manufacturing operations.</p>
-        </div>
-      </div>
-      <div class="project">
-        <img src="images/offgrid-lodge-naivasha.jpg" alt="Off-Grid Lodge – Naivasha" />
-        <div class="project-info">
-          <h3>Off-Grid Lodge – Naivasha</h3>
-          <p>Complete off-grid solar with energy storage, ensuring remote hospitality runs smoothly and sustainably.</p>
-        </div>
-      </div>
-      <!-- Second row: placeholder projects -->
-      <div class="project">
-        <img src="images/picture1.jpg" alt="Project Picture 1" />
-        <div class="project-info">
-          <h3>Picture 1</h3>
-          <p>Sample project – description goes here.</p>
-        </div>
-      </div>
-      <div class="project">
-        <img src="images/picture2.jpg" alt="Project Picture 2" />
-        <div class="project-info">
-          <h3>Picture 2</h3>
-          <p>Sample project – description goes here.</p>
-        </div>
-      </div>
-      <div class="project">
-        <img src="images/picture3.jpg" alt="Project Picture 3" />
-        <div class="project-info">
-          <h3>Picture 3</h3>
-          <p>Sample project – description goes here.</p>
-        </div>
-      </div>
-    </div>
-   <!-- <div style="text-align:center;">
+<!-- Header: From main.css -->
+<header>
+<div class="header-bar">
+<h1>WattSun Solar</h1>
+<button aria-label="Open menu" class="nav-toggle">☰</button>
+</div>
+<nav>
+<a href="index.html">Home</a>
+<a href="solutions.html">Solutions</a>
+<a href="shop.html">Shop</a>
+<a href="financing.html">Financing</a>
+<a href="projects.html">Projects</a>
+<a href="contact.html">Contact</a>
+<!--<a href="cart.html">🛒 Cart</a>-->
+</nav>
+</header>
+<section>
+<h2 class="centered-section-title">Recent Projects</h2>
+<div class="grid">
+<!-- First row: real projects -->
+<div class="project">
+<img alt="Family Home – Karen" src="images/family-home-karen.jpg"/>
+<div class="project-info">
+<h3>Family Home – Karen</h3>
+<p>3kW rooftop solar with battery backup. Reliable clean power for the whole family, even during outages.</p>
+</div>
+</div>
+<div class="project">
+<img alt="Nairobi Factory" src="images/nairobi-factory.jpg"/>
+<div class="project-info">
+<h3>Nairobi Factory</h3>
+<p>9kW hybrid inverter system. Industrial-grade solar for uninterrupted manufacturing operations.</p>
+</div>
+</div>
+<div class="project">
+<img alt="Off-Grid Lodge – Naivasha" src="images/offgrid-lodge-naivasha.jpg"/>
+<div class="project-info">
+<h3>Off-Grid Lodge – Naivasha</h3>
+<p>Complete off-grid solar with energy storage, ensuring remote hospitality runs smoothly and sustainably.</p>
+</div>
+</div>
+<!-- Second row: placeholder projects -->
+<div class="project">
+<img alt="Project Picture 1" src="images/picture1.jpg"/>
+<div class="project-info">
+<h3>Picture 1</h3>
+<p>Sample project – description goes here.</p>
+</div>
+</div>
+<div class="project">
+<img alt="Project Picture 2" src="images/picture2.jpg"/>
+<div class="project-info">
+<h3>Picture 2</h3>
+<p>Sample project – description goes here.</p>
+</div>
+</div>
+<div class="project">
+<img alt="Project Picture 3" src="images/picture3.jpg"/>
+<div class="project-info">
+<h3>Picture 3</h3>
+<p>Sample project – description goes here.</p>
+</div>
+</div>
+</div>
+<!-- <div style="text-align:center;">
       <a class="gold-btn" href="#">View More Projects</a>
     </div>-->
-  </section>
+</section>
+<!-- Footer: From main.css -->
+<footer>
+    © 2025 WattSun Solar Kenya | <div class="footer-contacts"><a href="mailto:info@wattsun.co.ke">info@wattsun.co.ke</a></div>
+</footer>
 
-  <!-- Footer: From main.css -->
-  <footer>
-    &copy; 2025 WattSun Solar Kenya | <div class="footer-contacts"><a href="mailto:info@wattsun.co.ke">info@wattsun.co.ke</a></div>
-  </footer>
-  <script src="main.js"></script>
+<script>
+  const navToggle = document.querySelector('.nav-toggle');
+  const header = document.querySelector('header');
+  navToggle.addEventListener('click', function() {
+    header.classList.toggle('nav-open');
+  });
+  document.querySelectorAll('header nav a').forEach(link => {
+    link.addEventListener('click', () => header.classList.remove('nav-open'));
+  });
+</script>
+<script src="main.js"></script>
 </body>
 </html>
-
-
 <!-- This HTML file lists some of the projects WattSun Solar has completed, showcasing their expertise in solar solutions. -->
 <!-- The projects include a family home, an industrial factory, and an off-grid lodge, each with a brief description and an image. -->
 <!-- The footer provides contact information and copyright notice. -->
 <!-- The page is styled using an external CSS file (main.css) for consistent design across the site. -->
-<!-- The header includes navigation links to other pages like Home, Solutions, Shop, Projects
+&lt;!-- The header includes navigation links to other pages like Home, Solutions, Shop, Projects
